<resources>
    <string name="app_name">LayoutDesigns</string>
    <string name="change_text_views">Change Values</string>
    <string name="reset">Reset</string>
    <string name="hello_world">Hello World!</string>
    <string name="this_is_our_first_layout">This is our first Layout</string>
    <string name="activity_second">Activity Second</string>
    <string name="plus_5_points">+5 Points</string>
    <string name="plus_10_points">+10 Points</string>
    <string name="plus_15_points">+15 Points</string>
    <string name="plus_20_points">+20 Points</string>
    <string name="reset_score">Reset Score</string>
    <string name="activity_score_card">ScoreCard Activity</string>
    <string name="textview">TextView</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_your_department">Enter Your Department</string>
    <string name="submit_details">Submit Details</string>
    <string name="player_details">Player Name: %1$s, Player Role: %2$s, Jersey Number: %3$s</string>
</resources>