<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_10"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_fragment_test"
        android:orientation="vertical">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/edt_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/enter_age" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/enter_address" />

    <EditText
        android:id="@+id/edt_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/enter_your_department" />

    <Button
        android:id="@+id/submit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_details" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame_layout_fragment_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>
</LinearLayout>

